@@ -1,23 +1,20 @@
-
 package com.clonair.back.property;
 
 import com.clonair.back.image.Image;
 import com.clonair.back.image.ImageService;
 import com.clonair.back.location.Location;
-
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
-
 import com.clonair.back.security.service.JwtService;
 import com.clonair.back.user.Role;
 import com.clonair.back.user.User;
 import com.clonair.back.user.UserService;
+import java.util.ArrayList;
+import java.util.stream.Collectors;
 import lombok.Data;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.stereotype.Service;
-
 import static com.clonair.back.security.utils.Utils.obtenerUserDetails;
 
 @Service
@@ -44,12 +41,12 @@ public class PropertyServiceImp implements PropertyService {
             UserDetails userDetails = obtenerUserDetails(); // Obtén los UserDetails necesarios
 
             if (jwtService.isTokenValid(token, userDetails)) { // Validación del token JWT con los UserDetails
-                Optional<User> userOptional = userService.findByUsername(userDetails.getUsername()); // Buscar el usuario por su nombre de usuario
+                Optional<User> userOptional = userService.findByUsername(userDetails.getUsername()); // Buscar el usuario por su nombre de usuario(email en este caso)
                 User user = userOptional.orElse(null); // Obtener el User del Optional
 
                 if (user != null && user.getRole() == Role.OWNER) {
                     // Crear una nueva propiedad sin establecer su ID explícitamente
-                    Property property = requestToPropertyMap(request, token);
+                    Property property = requestToPropertyMap(request);
                     property.setUser(user);
                     propertyRepository.save(property);
                 } else {
@@ -65,28 +62,28 @@ public class PropertyServiceImp implements PropertyService {
 
     @Override
     public List<PropertyResponse> getAll() throws Exception {
-        List<Property> properties = propertyRepository.findAll();
-        return properties.stream()
-                .map(this::propertyToResponseMap)
-                .collect(Collectors.toList());
+        return propertyRepository.findAll()
+                                 .stream()
+                                 .map(this::propertyToResponseMap)
+                                 .toList();
     }
 
     @Override
     public List<PropertyResponse> filtered(String category) throws Exception {
-        List<Property> properties = propertyRepository.findByCategory(Category.valueOf(category));
-        return properties.stream()
-                .map(this::propertyToResponseMap)
-                .collect(Collectors.toList());
+        return propertyRepository.findByCategory(Category.valueOf(category))
+                                 .stream()
+                                 .map(this::propertyToResponseMap)
+                                 .toList();
     }
 
     @Override
     public void delete(String id) throws Exception {
         Property property = propertyRepository.findById(id)
-                .orElseThrow(() -> new Exception("Property not found"));
+                                              .orElseThrow(() -> new Exception("Property not found"));
         propertyRepository.delete(property);
     }
 
-    private Property requestToPropertyMap(PropertyRequest request, String token) throws Exception {
+    private Property requestToPropertyMap(PropertyRequest request) throws Exception {
         Property property = new Property();
 
         // Crear una nueva instancia de Location para esta propiedad
@@ -111,7 +108,6 @@ public class PropertyServiceImp implements PropertyService {
         if (request.active() != null) {
             property.setActive(request.active());
         }
-
         return property;
     }
 
@@ -124,11 +120,12 @@ public class PropertyServiceImp implements PropertyService {
                 property.getDescription(),
                 property.getValue(),
                 property.isActive(),
-                property.getImages().stream()
+                property.getImages()
+                        .stream()
                         .map(Image::getUrl)
                         .collect(Collectors.toList()),
                 property.getLocation(),
-                property.getAvailability()
+                new ArrayList<>()
         );
     }
 
